# prokaryotic

./: .gitignore  2022-12-07-test_config.yaml  2022-12-08-test_config.yaml  2022-12-14-test_config.yaml  CMakeLists.txt  Makefile  comms.cpp  comms.h  config.yaml  debug_snippet.cpp  dna.yaml  prokaryotic.cpp  prokaryotic.h  prokaryotic.py  reaction_table.yaml  run.cpp  scratch_doctest.cpp  scratch_mvc.py  scratch_protobuf.cpp  scratch_protobuf_2.cpp  scratch_py2cpp.cpp  scratch_py2cpp.py  scratch_termplot.py  scratch_textual.py  scratch_yaml.cpp  scratch_zmq.cpp  scratch_zmq2python.cpp  scratch_zmq2python.py  test.cpp
